--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "winxin-dev",
+  "name": "weixin",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "utils.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +12,8 @@
   "dependencies": {
     "ejs": "^2.5.6",
     "express": "^4.15.2",
-    "request": "^2.81.0"
+    "express-session": "^1.15.2",
+    "request": "^2.81.0",
+    "uuid": "^3.0.1"
   }
 }
